# grow

./: .gitignore  Cargo.toml  README.md  cspell.json  flake.nix  grow-dashboard.json  test.py  testy.py
.direnv/: flake-profile-1-link  flake-profile-2-link
agent/: Cargo.toml  README.md
agent/migrations/: 20240825195355_air-measurements.sql  20240825201902_light-measurements.sql  20240825201909_water-level-measurements.sql
agent/src/: agent.rs  air.rs  air_manager.rs  app.rs  config.rs  control.rs  datastore.rs  error.rs  i2c.rs  lib.rs  light.rs  light_sampler.rs  main.rs  manage.rs  measure.rs  sample.rs  threshold.pest  threshold.rs  utils.rs  water.rs  water_level.rs  water_level_manager.rs
agent/src/config/: air.rs  air_pump.rs  control.rs  fan.rs  light.rs  mod.rs  sample.rs  water_level.rs
agent/src/control/: air.rs  air_pump.rs  error.rs  exhaust.rs  fan.rs  fan_controller.rs  light.rs  light_controller.rs  pump.rs  water_level.rs
agent/src/manage/: air.rs  air_pump.rs  control.rs  error.rs  exhaust.rs  fan.rs  light.rs  pump.rs  sample.rs  water.rs
agent/src/manage/control/: air_pump.rs  error.rs  exhaust.rs  fan.rs  light.rs  pump.rs
agent/src/manage/sample/: air.rs  error.rs  light.rs  water_level.rs
agent/src/manage/sample/air/: air_sensor.rs  params.rs
agent/src/manage/sample/water_level/: sensor.rs
agent/src/measure/: bh1750fvi.rs  bme680.rs  i2c.rs  mod.rs  pylib.rs  vl53l0x.rs
agent/src/periph/: error.rs  i2c.rs
agent/src/sample/: air.rs  error.rs  light.rs  water_level.rs
agent/src/utils/: i2c.rs
api/: Cargo.toml
api/proto/: measurement.proto
api/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  measurement.rs
dataserver/: Cargo.toml
dataserver/.sqlx/: query-097d2069afc5124f4392828f214c23283dca86f5c28a1c458f822efb0aabf354.json
dataserver/src/: server.rs
datasource/: Cargo.toml
datasource/src/: config.rs  main.rs  server.rs
examples/nix-rpi-sd-image/: README.md  configuration.nix  flake.nix
gpiotest/: Cargo.toml  README.md
gpiotest/src/: main.rs
hardware/: Cargo.toml
hardware/src/: i2c.rs  lib.rs
measure/: Cargo.toml
measure/src/: air.rs  i2c.rs  lib.rs  light.rs  water_level.rs
measure/src/air/: bme680.rs  params.rs  sensor_data.rs
measure/src/light/: bh1750fvi.rs
measure/src/water_level/: vl53l0x.rs  vl53lox.rs
measurement-service/: Cargo.toml
measurement-service/examples/: client.rs
measurement-service/migrations/20240120210325_create-measurements/: down.sql  up.sql
measurement-service/src/: app.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs
measurement-service/src/datasource/: mod.rs  types.rs
nix/: agent-module.nix  agent-service.nix  agent.nix  gpiotest.nix  grow.nix  install-sampler.nix  measurement-service.nix  module.nix  sampler.nix  sensortest.nix
nix/modules/: agent.nix  default.nix  grafana.nix  server.nix
sensortest/: Cargo.toml  README.md
sensortest/src/: main.rs
server/: Cargo.toml  README.md
server/src/: config.rs  main.rs  server.rs
src/: main.rs
utils/: Cargo.toml
utils/proto/: measurement.proto
utils/src/: lib.rs  main.rs
utils/src/api/: grow.rs  mod.rs
