[workspace]
members = ["agent", "measure",  "sensortest", "gpiotest"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rorosen"]

[workspace.dependencies]
serde = "1.0.193"
serde_json = "1.0.120"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.48"
tokio = "1.32.0"
tokio-util = "0.7.10"
tonic = "0.10.2"
bson = "2.8.1"
anyhow = "1.0.86"
rppal = "0.18.0"
async-trait = "0.1.81"
grow-utils = { path = "./utils" }
grow-measure = { path = "./measure" }

[workspace.lints.clippy]
unwrap_used = "deny"
