[workspace]
members = ["agent", "measure",  "sensortest", "gpiotest", "datasource"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rorosen"]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bson = "2.8.1"
chrono = "0.4.38"
env_logger = "0.10.0"
gpio-cdev = "0.6.0"
grow-measure = { path = "./measure" }
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.120"
sqlx = "0.8.1"
thiserror = "1.0.48"
tokio = "1.32.0"
tokio-util = "0.7.10"
tonic = "0.10.2"
