[package]
name = "grow-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
env_logger.workspace = true
gpio-cdev.workspace = true
grow-measure.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"]}
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
    "fs",
    "io-util",
] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
tempfile = "3.10.1"
