[package]
name = "grow-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
gpio-cdev.workspace = true
nix = { workspace = true, features = ["ioctl"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"]}
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
    "fs",
    "io-util",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
trait-variant.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
