[package]
name = "grow-dataserver"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7.5"
chrono = { workspace = true, features = ["serde"] }
grow-measure.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"]}
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
