[package]
name = "grow-datasource"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7.5"
chrono = { workspace = true, features = ["serde"] }
env_logger.workspace = true
grow-measure.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"]}
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
