[package]
name = "grow-measure"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tokio-util.workspace = true
log.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "time", "macros"] }
serde = { workspace = true, features = ["derive"] }
nix = { version = "0.29.0", features = ["ioctl"] }
