[package]
name = "grow-measure"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
nix = { version = "0.29.0", features = ["ioctl"] }
serde = { workspace = true, features = ["derive"] }
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "time", "macros"] }
tokio-util.workspace = true
