[package]
name = "measurement-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
api.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "rt",
] }
tonic.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }

mongodb = "2.8.0"
chrono.workspace = true
bson = "2.8.1"
