[package]
name = "measurement-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
grow-utils.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "rt",
] }
tonic.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }

mongodb = "2.8.0"
chrono.workspace = true
bson = { version = "2.8.1", features = ["chrono-0_4"] }
futures-lite = "2.2.0"
