[package]
name = "measurement-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
grow-utils.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "rt",
] }
tonic.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
diesel-async = { version = "0.4.1", features = [
    "deadpool",
    "postgres",
    "async-connection-wrapper",
] }
diesel_migrations = "2.1.0"
diesel = { version = "2.1.4", features = ["chrono"] }
prost-types = "0.12.3"
