[package]
name = "grow-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# unique dependencies
prost = "0.12.3"
prost-types = "0.12.3"
tonic-build = "0.10.2"
# shared dependencies
tonic.workspace = true
serde = { workspace = true, features = ["derive"] }
bson = { workspace = true, features = ["chrono-0_4"] }
